edit tailwind css layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,4 +6,7 @@
   body {
     @apply font-ja leading-relaxed tracking-wider;
   }
+  .styled-container {
+    @apply container mx-auto max-w-4xl;
+  }
 }
