--- a/src/styles/components/button.module.scss
+++ b/src/styles/components/button.module.scss
@@ -4,11 +4,16 @@
   justify-content: center;
   overflow: hidden;
   border-radius: 0.5rem;
-  background-image: linear-gradient(to bottom right, #9f7aea, #3b82f6);
+  background-image: linear-gradient(
+    to bottom right,
+    #9f7aea,
+    #3b82f6
+  ) !important;
   padding: 0.125rem;
   font-weight: 500;
   color: #1f2937;
   cursor: pointer;
+  min-width: 150px;
 }
 
 .button:focus {
@@ -23,6 +28,7 @@
 }
 
 .button span {
+  text-align: center;
   border-radius: 0.375rem;
   background-color: #fff;
   padding-left: 1.25rem;
@@ -32,6 +38,7 @@
   transition-property: all;
   transition-duration: 75ms;
   transition-timing-function: ease-in;
+  min-width: 150px;
 }
 
 .button:hover span {
