--- a/src/components/elements/label/label.module.scss
+++ b/src/components/elements/label/label.module.scss
@@ -1,7 +1,6 @@
-.label {
+%label {
   cursor: pointer;
   border-radius: 0.25rem;
-  background-color: #bfdbfe;
   padding-left: 0.625rem;
   padding-right: 0.625rem;
   padding-top: 0.125rem;
@@ -9,16 +8,20 @@
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
-  color: #1e3a8a;
-  &.red,
-  &.delete,
-  &.decrement,
-  &.default {
+}
+.label {
+  &-blue {
+    @extend %label;
+    background-color: #bfdbfe;
+    color: #1e3a8a;
+  }
+  &-red {
+    @extend %label;
     background-color: #fecaca;
     color: #b91c1c;
   }
-  &.green,
-  &.selected {
+  &-green {
+    @extend %label;
     background-color: #c6f6d5;
     color: #047857;
   }
