remove tailwind css

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -18,7 +18,7 @@
 @import 'objects/flex-container';
 
 // components
-@import 'components/main';
+// @import 'components/main';
 
 // utilities
 @import 'utilities/main';
