add button variant

--- a/src/assets/styles/css-modules.scss
+++ b/src/assets/styles/css-modules.scss
@@ -8,15 +8,15 @@
 @import 'tools/main';
 
 // generic
-@import 'generics/reset';
+// @import 'generics/reset';
 
 // elements
-@import 'elements/main';
+// @import 'elements/main';
 
 // objects
-@import 'objects/common-container';
-@import 'objects/flex-container';
-@import 'objects/gap-container';
+// @import 'objects/common-container';
+// @import 'objects/flex-container';
+// @import 'objects/gap-container';
 
 // components
 // @import 'components/main';
