--- a/src/assets/styles/settings/_color.scss
+++ b/src/assets/styles/settings/_color.scss
@@ -6,16 +6,25 @@ $black-dark-grey: #363636;
 
 /* grey */
 $grey: #808080;
+$carbon: #333;
+$goshawk-grey: #444;
+$basalt-grey: #999;
 
 /* white */
 $white: #ffffff;
 $white-dr-white: #fafafa;
+$lighthouse: #f4f4f4;
 
 /* blue */
+$vintage-blue: #84bcb4; // main
 
 /* green */
+$devils-grass: #4caf50; // mui palette
 
 /* red */
+$spicy-berry: #d13267; // error
+$amour: #ef5350; // mui palette
 
 /* shadow color */
 $black-shadow: rgba(0, 0, 0, 0.1);
+$overlay: rgba(0, 0, 0, 0.6);
