--- a/src/components/buttons/button.module.scss
+++ b/src/components/buttons/button.module.scss
@@ -1,3 +1,35 @@
+@import '../../assets/styles/css-modules.scss';
+/* Setting Layer */
+
+/* black */
+$black: #000;
+$black-dark-grey: #363636;
+
+/* grey */
+$grey: #808080;
+$carbon: #333;
+$goshawk-grey: #444;
+$basalt-grey: #999;
+
+/* white */
+$white: #ffffff;
+$white-dr-white: #fafafa;
+$lighthouse: #f4f4f4;
+
+/* blue */
+$vintage-blue: #84bcb4; // main
+
+/* green */
+$devils-grass: #4caf50; // mui palette
+
+/* red */
+$spicy-berry: #d13267; // error
+$amour: #ef5350; // mui palette
+
+/* shadow color */
+$black-shadow: rgba(0, 0, 0, 0.1);
+$overlay: rgba(0, 0, 0, 0.6);
+
 @mixin hoverAnime {
   @media (hover: hover) {
     &:hover {
@@ -39,16 +71,41 @@
 
 // NOTE:button-primary, button-secondaryで呼び出す
 .button {
-  &-primary {
+  &-primary-contained {
     @extend %button;
     color: white;
-    background-color: #1ea7fd;
+    background-color: $vintage-blue;
+    border: 1px solid $vintage-blue;
   }
-  &-secondary {
+  &-primary-outlined {
     @extend %button;
-    color: #333;
-    background-color: transparent;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+    color: $vintage-blue;
+    background-color: white;
+    border: 1px solid $vintage-blue;
+  }
+  &-danger-contained {
+    @extend %button;
+    color: white;
+    background-color: $amour;
+    border: 1px solid $amour;
+  }
+  &-danger-outlined {
+    @extend %button;
+    color: $amour;
+    background-color: white;
+    border: 1px solid $amour;
+  }
+  &-success-contained {
+    @extend %button;
+    color: white;
+    background-color: $devils-grass;
+    border: 1px solid $devils-grass;
+  }
+  &-success-outlined {
+    @extend %button;
+    color: $devils-grass;
+    background-color: white;
+    border: 1px solid $devils-grass;
   }
 }
 
