--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -16,6 +16,7 @@
 // objects
 @import 'objects/common-container';
 @import 'objects/flex-container';
+@import 'objects/flex-gap-container';
 @import 'objects/gap-container';
 
 // components
