--- a/src/assets/styles/generics/_reset.scss
+++ b/src/assets/styles/generics/_reset.scss
@@ -117,6 +117,7 @@ textarea {
   border: none;
   border-radius: 0;
   outline: none;
+  padding: 0;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -126,13 +127,13 @@ textarea {
   resize: none;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
   display: none;
 }
 
-input[type="submit"],
-input[type="button"],
+input[type='submit'],
+input[type='button'],
 label,
 button,
 select {
@@ -147,12 +148,12 @@ select::-ms-expand {
 //   -webkit-box-shadow: 0 0 0 1000px $white-dr-white inset;
 // }
 
-input[type="number"] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
 
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
