--- a/src/assets/styles/utilities/_main.scss
+++ b/src/assets/styles/utilities/_main.scss
@@ -58,3 +58,17 @@
 }
 
 /* stylelint-enable */
+
+@mixin hoverAnime {
+  @media (hover: hover) {
+    &:hover {
+      @content;
+    }
+  }
+
+  @media (hover: none) {
+    &:active {
+      @content;
+    }
+  }
+}
