--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -18,6 +18,8 @@
 @import 'objects/flex-container';
 @import 'objects/flex-gap-container';
 @import 'objects/gap-container';
+@import 'objects/center-wrapper';
+@import 'objects/center-inner';
 
 // components
 // @import 'components/main';
