--- a/src/assets/styles/settings/_color.scss
+++ b/src/assets/styles/settings/_color.scss
@@ -16,7 +16,9 @@ $white-dr-white: #fafafa;
 $lighthouse: #f4f4f4;
 
 /* blue */
+$dragon-bay: #5ea79d; // dark
 $vintage-blue: #84bcb4; // main
+$blue-angora: #aad1cb; // light
 
 /* green */
 $devils-grass: #4caf50; // mui palette
