--- a/src/assets/styles/settings/_font.scss
+++ b/src/assets/styles/settings/_font.scss
@@ -1,3 +1,4 @@
 /* Setting Layer */
 
-$font-family: sans-serif;
+// $font-family: sans-serif;
+$font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
