--- a/src/components/buttons/button.module.scss
+++ b/src/components/buttons/button.module.scss
@@ -19,7 +19,7 @@ $large-pd-x: 24px;
   line-height: 1;
   min-width: 150px;
   align-items: center;
-  box-shadow: 0px 3px 10px $black-shadow;
+  @include boxShadow();
   cursor: pointer;
   display: inline-flex;
   gap: 8px;
