--- a/src/components/modals/modal.module.scss
+++ b/src/components/modals/modal.module.scss
@@ -1,3 +1,5 @@
+@import '@/assets/styles/css-modules.scss';
+
 /* Custom CSS for Modal */
 .modal {
   position: fixed;
@@ -29,7 +31,7 @@
   border-radius: 0.25rem;
   border: 0;
   background-color: #ffffff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1);
+  @include boxShadow();
   outline: none;
 }
 
