--- a/src/components/modals/modal.module.scss
+++ b/src/components/modals/modal.module.scss
@@ -1,82 +1,32 @@
 @import '@/assets/styles/css-modules.scss';
 
-/* Custom CSS for Modal */
-.modal {
+.modal-overlay {
+  /*　画面全体を覆う設定　*/
   position: fixed;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
-  z-index: 50;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /*　画面の中央に要素を表示させる設定　*/
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow-y: auto;
-  overflow-x: hidden;
-  outline: none;
-  background-color: rgba(0, 0, 0, 0.6);
 }
 
-.inner {
-  position: relative;
-  margin: auto;
-  width: 50%;
-}
-
-.content {
-  position: relative;
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  border-radius: 0.25rem;
-  border: 0;
-  background-color: #ffffff;
+.modal-content {
+  z-index: 2;
+  padding: 30px;
+  border-radius: 1rem;
+  background: #fff;
   @include boxShadow();
-  outline: none;
-}
-
-.header {
-  display: flex;
-  align-items: start;
-  justify-content: space-between;
-  border-radius: 0.25rem 0.25rem 0 0;
-  border-bottom: 1px solid #a0a0a0;
-  padding: 1.25rem;
-}
-
-.header h3 {
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-
-.body {
-  flex: 1;
-  padding: 1.5rem;
-}
-
-.body p {
-  margin: 1rem 0;
-  font-size: 1.125rem;
-  line-height: 1.5;
-}
-
-.footer {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  border-radius: 0 0 0.25rem 0.25rem;
-  border-top: 1px solid #a0a0a0;
-  padding: 1.5rem;
-}
-
-/* Other Styles */
-.backdrop {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 40;
-  background-color: #000;
-  opacity: 0.25;
+  &.small {
+    width: 40%;
+  }
+  &.medium {
+    width: 60%;
+  }
+  &.large {
+    width: 80%;
+  }
 }
