fix css modules

--- a/src/assets/styles/settings/_color.scss
+++ b/src/assets/styles/settings/_color.scss
@@ -26,6 +26,7 @@ $devils-grass: #4caf50; // mui palette
 /* red */
 $spicy-berry: #d13267; // error
 $amour: #ef5350; // mui palette
+$baby-girl: #ffe2e7; // error bg
 
 /* shadow color */
 $black-shadow: rgba(0, 0, 0, 0.1);
